# solarmax_gem_sensitivity

./: .gitignore  README.md  pyproject.toml  solarmax_sensitivity.py  write_results_to_excel.py
.github/: .dependabot.yml
.github/workflows/: ci.yml
designs/: 01jp2dyccrpvxb8fypqbdpphnr.csv  design_options.json  design_options_wolf_tail.json
examples/: Sensitivity Set Up.xlsx  emea_scenario.json  ger_scenario.json  sensitivity_set_up.json  solarmax_linked_scenario.json  solarmax_scenario.json  swe_scenario.json  testing_scenario.json  tur_scenario.json  uki_scenario.json  ~$Sensitivity Set Up.xlsx
src/gem/: gem_input_dict_modifiers.py  gem_service.py
src/helpers/: excel_to_sensitivity_json.py  format_time_taken.py  scenario_builder.py  solarmax_to_json.py  write_to_excel_template.py
src/models/: base_models.py  env_variables_config.py  gem_assessments.py  gem_results.py  sensitivity.py  settings.py
src/models/enums/: error_reasons.py  sensitivities.py  technologies.py
templates/: sensitivity_template_v1.xlsx
